<resources>
    <string name="app_name" translatable="false">Photosen</string>
    <string name="something_went_wrong">Oops! Something went wrong.</string>
    <string name="try_again">Try again</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="search_text">Search text</string>
    <string name="search">Search</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="download">Download</string>
    <string name="no_permisson">Can\'t download file without permission</string>
    <string name="downloading_image">Downloading image…</string>
    <string name="downloading_wallpaper">Downloading wallpaper…</string>
    <string name="download_error">Download error</string>
    <string name="download_complete">Download complete</string>
    <string name="click_here_to_open">Click here to open</string>
    <string name="open_file_with">Open file with</string>
    <string name="download_started">Download started</string>
    <string name="please_wait_for_current_download">Please wait for current download</string>
    <string name="tags">Tags:</string>
    <string name="new_search_tag">New search tag</string>
    <string name="popular">Popular</string>
    <string name="now">now</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="github" translatable="false">Github</string>
    <string name="github_link" translatable="false">github.com/commonpepper/photosen</string>
    <string name="photos_provided_by_flickr_com">Photos provided by flickr.com</string>
    <string name="support_development">Support development</string>
    <string name="rate">Rate</string>
    <string name="if_you_like_photosen_rate_it_on_play_store">Thanks for using this app! If you like Photosen, please, rate it on Google Play.</string>
    <string name="share_with">Share with</string>
    <string name="flickr_image">Flickr image</string>
    <string name="share">Share</string>
    <string name="latest">Latest</string>
    <string name="most_viewed">Most viewed</string>
    <string name="apply">Apply</string>
    <string name="error">Error</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="categories">Categories</string>
    <string name="libraries">Libraries</string>
    <string name="retrofit" translatable="false">Retrofit</string>
    <string name="retrofit_desc" translatable="false">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="picasso" translatable="false">Picasso</string>
    <string name="picasso_desc" translatable="false">A powerful image downloading and caching library for Android</string>
    <string name="photoview" translatable="false">PhotoView</string>
    <string name="photoview_desc" translatable="false">Implementation of ImageView for Android that supports zooming, by various touch gestures.</string>
    <string name="android_image_cropper" translatable="false">Android Image Cropper</string>
    <string name="image_cropper_desc" translatable="false">Image Cropping Library for Android, optimized for Camera / Gallery.</string>
    <string name="taptargetview" translatable="false">TapTargetView</string>
    <string name="taptargetview_desc" translatable="false">An implementation of tap targets from the Material Design guidelines for feature discovery</string>
    <string name="androidrate_desc" translatable="false">Rate app dialog library</string>
    <string name="androidrate" translatable="false">AndroidRate</string>
    <string name="download_fab_hint">Download image to default folder</string>
    <string name="set_as_wallpaper_fab_hint">Download and set as wallpaper</string>
    <string name="relevant">Relevant</string>
    <string name="appintro" translatable="false">AppIntro</string>
    <string name="make_a_cool_intro_for_your_android_app" translatable="false">Make a cool intro for your Android app.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">This short intro will provide you throw main functionality of the app.</string>
    <string name="intro_navigation">Navigation menu</string>
    <string name="intro_navigation_desc">It is available by sliding from the left of any app screen except this one.</string>
    <string name="intro_categories">Categories</string>
    <string name="intro_categories_desc">Try most popular categories of images, available from the menu.</string>
    <string name="intro_search">Search</string>
    <string name="intro_search_desc">It is available from the menu and \"Popular\" screen.</string>
    <string name="intro_rate_the_app">Rate the app!</string>
    <string name="intro_support_development">Support development!</string>
    <string name="intro_support_desc">Photosen is completly free and doesn\'t show ads, so your review is very-very important for me. You can do it later by clicking \"About\" in the menu. Thank you!</string>
    <string name="introduction">Introduction</string>
    <string name="load_comments">Show Comments</string>
    <string name="hide_comments">Hide comments</string>
    <string name="expandablelayout" translatable="false">ExpandableLayout</string>
    <string name="an_expandable_layout_container_for_android" translatable="false">An expandable layout container for Android</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_confirm">Do you really want to clear the history?</string>
    <plurals name="x_pixels">
        <item quantity="zero">%1$d pixels</item>
        <item quantity="one">%1$d pixel</item>
        <item quantity="two">%1$d pixels</item>
        <item quantity="few">%1$d pixels</item>
        <item quantity="many">%1$d pixels</item>
        <item quantity="other">%1$d pixels</item>
    </plurals>
    <plurals name="x_views">
        <item quantity="zero">%1$d views</item>
        <item quantity="one">%1$d view</item>
        <item quantity="two">%1$d views</item>
        <item quantity="few">%1$d views</item>
        <item quantity="many">%1$d views</item>
        <item quantity="other">%1$d views</item>
    </plurals>
</resources>
