<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010C33">

    <TextView
        android:layout_weight="25"
        android:textSize="28sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_support_development"
        />

    <ImageView
        android:layout_weight="25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/android_smile"/>

    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="25"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_support_desc"
        />

    <Button
        android:layout_marginBottom="100dp"
        android:id="@+id/intro_rate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/intro_rate_the_app"
        />

</LinearLayout>